# clicycle

./: CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES_2.0.2.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: basic_usage.py  click_integration.py
src/clicycle/: __init__.py  core.py  prompts.py  render.py  theme.py
src/clicycle/components/: progress.py  prompt.py  spinner.py  text.py
src/clicycle/interactive/: base.py  multi_select.py  select.py
tests/: optimized_performance_test.py  performance_test.py  test_clicycle.py  test_core.py  test_init.py  test_instance.py  test_module_interface.py  test_progress.py  test_prompt.py  test_prompts.py  test_render.py
